--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,11 @@ body, html {
 h1, h2, h3, h4, a {
     font-family: 'Roboto Slab', serif;
     color: #363636;
+    font-weight: lighter;
+}
+
+.current {
+    font-weight: bolder;
 }
 
 .container {
@@ -65,7 +70,7 @@ h1, h2, h3, h4, a {
     list-style: none;
     display: flex;
     justify-content: space-between;
-    width: 15vh;
+    width: 100px;
 }
 
 .social-media a {
@@ -96,7 +101,6 @@ nav {
 .nav-links {
     list-style: none;
     display: none;
-    width: 60vh;
 }
 
 .nav-links a{
@@ -126,10 +130,9 @@ nav {
 }
 
 h1 {
-    font-size: 26px;
-    line-height: 30px;
-    font-weight: lighter;
-    margin-bottom: 2rem;
+    font-size: 30px;
+    line-height: 30px;    
+    margin-bottom: 1.5rem;
 }
 
 .showcase p {
@@ -145,6 +148,60 @@ h1 {
 .btn-primary:hover {
     background-color: var(--green-color);
 }
+/* SHOWCASE END */
+
+
+/* ABOUT US START */
+.about-us {
+    margin-top: 2rem;
+}
+
+.about-us .container {
+    display: block;
+}
+
+.about-us h2 {
+    font-size: 24px;
+}
+
+.about-us h4 {
+    font-size: 12px;
+}
+
+.about-us p {
+    font-size: small;
+    /* padding: 0.5rem; */
+    /* margin-bottom: 1rem; */
+}
+
+#blue {
+    color: var(--blue-color);
+}
+
+#line {
+    height: 4px;
+    width: 100%;
+    background-color: var(--green-color);
+    margin: 1rem 0;
+}
+
+#text {
+    margin-top: 1rem;
+}
+
+.numbers {
+    list-style: none;
+    text-align: center;
+}
+
+.numbers h2 {
+    color: var(--blue-color);
+    margin-top: 1.5rem;
+}
+
+.second-person {
+    display: none;
+}
 
 
 
@@ -152,52 +209,61 @@ h1 {
 
 /* MEDIA QUERIES */
 
-@media (min-width: 768px) {
-
-    .container {
-        width: 80%;
-        max-width: 1140px;
-    }
-
-    .top-menu {
-        display: block;
-    }
-
-    nav {
-        padding: 1.5rem 0;
-    }
-
-    .logo {
-        height: 50px;
-    }
-
-    .nav-links {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .fa-bars {
-        display: none;
-    }
-
+@media (min-width: 630px) {   
+   
     .showcase .container {
         flex-direction: row-reverse;
     }
-
     .showcase-text {
         text-align: start;
     }
 
+    .numbers {
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+    }    
+}
+
+@media (min-width: 768px) {
+    
+    .container {
+        width: 80%;
+        max-width: 1140px;
+    }
+    
+    .top-menu {
+        display: block;
+    }
+    
+    nav {
+        padding: 1rem 0;
+    }
+    
+    .logo {
+        height: 50px;
+    }
+    
+    .nav-links {
+        display: flex;
+        justify-content: space-between;
+        width: 300px;
+    }
+    
+    .fa-bars {
+        display: none;
+    }
+    
     .first-person {
         height: calc(90vh - 135.2px);
         margin-right: 5rem;
     }
-
+    
     h1 {
         font-size: 36px;
         line-height: 40px;
     }
-
+    
     .showcase p {
         display: block;
         font-size: small;
@@ -208,4 +274,27 @@ h1 {
         width: initial;
     }
 
+    .about-us .container {
+        display: flex;
+    }
+
+    .numbers {
+        justify-content: space-between;
+        text-align: start;
+        width: 80%;
+    }
+
+    .second-person {
+        display: inline;
+        height: 400px;        
+    }
+
+    .aboutus-text {
+        width: 50%;
+    }
+
+    .about-us h4 {
+        margin-right: 1.5rem;
+    }
+    
 }
